# cppcon24

./: .gitignore  README.md  deps.py  test.py
cmake_cps/: CMakeLists.txt  conanfile.py
demo/: README.txt
demo/src/: main.cpp
myapp/: conanfile.txt  myapp.cpp
myapp/cmake/: CMakeLists.txt  conanfile.txt
myapp/make/: Makefile  conanfile.txt
myapp/meson/: conanfile.txt  meson.build
myapp/visual/: .gitignore  conanfile.txt  myapp.sln  myapp.vcxproj
recipes/openssl/3.x.x/: conandata.yml  conanfile.py
recipes/openssl/3.x.x/test_package/: CMakeLists.txt
recipes/zlib/all/: cmake_diff.txt  conandata.yml  conanfile.py
recipes/zlib/all/patches/1.3.1/: 0002-cps.patch
recipes/zlib/all/test_package/: CMakeUserPresets.json
